v3.9.3 (XXXX-XX-XX)
-------------------

* Fixed BTS-902 (clicking on the search icon in the analyzers filter input used
  to take the user to the collections view).

* Fixed BTS-852 (user's saved queries used to disappear after updating user
  profile).

* BTS-913: check for proper timezone setup of the system on startup.
  This will then log errors that else would only occur in AQL-Functions at
  runtime.

* Fixed BTS-851: "Could not fetch the applier state of: undefined".

* Since ArangoDB 3.8 there was a loophole for creating duplicate keys in the
  same collection. The requirements were:
  - cluster deployment
  - needs at least two collections (source and target), and the target
    collection must have more than one shard and must use a custom shard key.
  - inserting documents into the target collection must have happened via an AQL
    query like `FOR doc IN source INSERT doc INTO target`.
  In this particular combination, the document keys (`_key` attribute) from the
  source collection were used as-is for insertion into the target collection.
  However, as the target collection is not sharded by `_key` and uses a custom
  shard key, it is actually not allowed to specify user-defined values for
  `_key`. That check was missing since 3.8 in this particular combination and
  has now been added back. AQL queries attempting to insert documents into a
  collection like this will now fail with the error "must not specifiy _key for
  this collection", as they used to do before 3.8.

* Fixed an invalid attribute access in AQL query optimization.
  Without the fix, a query such as

      LET data = {
        "a": [
          ...
        ],
      }
      FOR d IN data["a"]
        RETURN d

  could fail with error "invalid operand to FOR loop, expecting Array".

* Updated OpenSSL to 1.1.1q and OpenLDAP to 2.6.3.

* Updated arangosync to v2.11.0.

* Changed default macOS CI compiler to LLVM clang-13.
