@@ -46,7 +46,24 @@ function ahuacatlQueryOptimizerSortTestSuite () {
   var idx = null;
 
   var explain = function (query, params) {
-    return helper.getCompactPlan(AQL_EXPLAIN(query, params, { optimizer: { rules: [ "-all", "+use-index-for-sort", "+use-indexes", "+remove-redundant-sorts" ] } })).map(function(node) { return node.type; });
+      return helper.getCompactPlan(AQL_EXPLAIN(query, params, { optimizer: { rules: [ "-all", "+use-index-for-sort", "+use-indexes", "+remove-redundant-sorts" ] } })).map(function(node) { return node.type; });};
+
+  const generateData = () => {
+    // Static data we will use in our AQL Queries.
+    // We do not need collection/document access or dynamic data.
+    return [
+      {"friend": {"name": "piotr"}, id: 1, age: 10},
+      {"friend": {"name": "heiko"}, id: 2, age: 20},
+      {"friend": {"name": "micha"}, id: 3, age: 30}
+    ];
+  };
+
+  const explainMultipleSorts = function (query, params) {
+    return helper.removeClusterNodes(
+      helper.getCompactPlan(
+        AQL_EXPLAIN(query, params)).map(function (node) {
+        return node.type;
+      }));
   };
 
   return {
@@ -55,13 +72,13 @@ function ahuacatlQueryOptimizerSortTestSuite () {
 /// @brief set up
 ////////////////////////////////////////////////////////////////////////////////
 
-    setUpAll : function () {
+    setUpAll: function () {
       internal.db._drop(cn);
       collection = internal.db._create(cn);
 
       let docs = [];
       for (var i = 0; i < 100; ++i) {
-        docs.push({ "value" : i, "value2" : i });
+        docs.push({"value": i, "value2": i});
       }
       collection.insert(docs);
     },
@@ -101,12 +118,12 @@ function ahuacatlQueryOptimizerSortTestSuite () {
       assertEqual(50, actual[50].value);
       assertEqual(98, actual[98].value);
       assertEqual(99, actual[99].value);
-      
+
       assertEqual([ "SingletonNode",
                     "ScatterNode",
                     "RemoteNode",
                     "EnumerateCollectionNode",
-                    "RemoteNode", 
+                    "RemoteNode",
                     "GatherNode",
                     "CalculationNode",
                     "SortNode",
@@ -130,7 +147,7 @@ function ahuacatlQueryOptimizerSortTestSuite () {
       assertEqual(49, actual[50].value);
       assertEqual(1, actual[98].value);
       assertEqual(0, actual[99].value);
-      
+
       assertEqual(["SingletonNode",
                    "ScatterNode",
                    "RemoteNode",
@@ -161,16 +178,16 @@ function ahuacatlQueryOptimizerSortTestSuite () {
       assertEqual(50, actual[50].value);
       assertEqual(98, actual[98].value);
       assertEqual(99, actual[99].value);
-      
-      assertEqual(["SingletonNode", 
-                   "ScatterNode",
+
+      assertEqual(["SingletonNode",
+          "ScatterNode",
                    "RemoteNode",
                    "IndexNode",
                    "RemoteNode",
                    "GatherNode",
-                   "CalculationNode",
-                   "ReturnNode"],
-                  explain(query));
+          "CalculationNode",
+          "ReturnNode"],
+        explain(query));
     },
 
 ////////////////////////////////////////////////////////////////////////////////
@@ -190,7 +207,7 @@ function ahuacatlQueryOptimizerSortTestSuite () {
       assertEqual(18, actual[3].value);
       assertEqual(98, actual[83].value);
       assertEqual(99, actual[84].value);
-     
+
       assertEqual(["SingletonNode",
                    "ScatterNode",
                    "RemoteNode",
@@ -221,7 +238,7 @@ function ahuacatlQueryOptimizerSortTestSuite () {
       assertEqual(96, actual[3].value);
       assertEqual(16, actual[83].value);
       assertEqual(15, actual[84].value);
-      
+
       assertEqual(["SingletonNode",
                    "ScatterNode",
                    "RemoteNode",
@@ -253,7 +270,7 @@ function ahuacatlQueryOptimizerSortTestSuite () {
       assertEqual(50, actual[50].value);
       assertEqual(98, actual[98].value);
       assertEqual(99, actual[99].value);
-      
+
       assertEqual(["SingletonNode",
                    "ScatterNode",
                    "RemoteNode",
@@ -286,7 +303,7 @@ function ahuacatlQueryOptimizerSortTestSuite () {
       assertEqual(49, actual[50].value);
       assertEqual(1, actual[98].value);
       assertEqual(0, actual[99].value);
-      
+
       assertEqual(["SingletonNode",
                    "ScatterNode",
                    "RemoteNode",
@@ -319,26 +336,111 @@ function ahuacatlQueryOptimizerSortTestSuite () {
       assertEqual(50, actual[50].value);
       assertEqual(98, actual[98].value);
       assertEqual(99, actual[99].value);
-      
+
       assertEqual(["SingletonNode",
-                   "ScatterNode",
+          "ScatterNode",
                    "RemoteNode",
                    "IndexNode",
                    "RemoteNode",
                    "GatherNode",
-                   "CalculationNode",
-                   "FilterNode",
-                   "CalculationNode",
-                   "CalculationNode",
-                   "ReturnNode"],
-                  explain(query));
+          "CalculationNode",
+          "FilterNode",
+          "CalculationNode",
+          "CalculationNode",
+          "ReturnNode"],
+        explain(query));
+    },
+
+////////////////////////////////////////////////////////////////////////////////
+/// @brief check sort tripplets
+////////////////////////////////////////////////////////////////////////////////
+
+    testSortTripplets1: function () {
+      const query = `
+        LET friends = ${JSON.stringify(generateData())}
+        FOR friend in friends 
+          SORT friend.friend.name, friend.id, friend.age
+          SORT friend.friend.name, friend.id
+          SORT friend.id
+        RETURN friend    
+      `;
+
+      const actual = getQueryResults(query);
+      assertEqual(3, actual.length);
+      assertEqual("piotr", actual[0].friend.name);
+      assertEqual("heiko", actual[1].friend.name);
+      assertEqual("micha", actual[2].friend.name);
+
+      assertEqual(["SingletonNode",
+          "CalculationNode",
+          "EnumerateListNode",
+          "CalculationNode",
+          "SortNode",
+          "ReturnNode"],
+        explainMultipleSorts(query));
+    },
+
+    testSortTripplets2: function () {
+      const query = `
+        LET friends = ${JSON.stringify(generateData())}
+        FOR friend in friends 
+          SORT friend.friend.name, friend.id, friend.age
+          SORT friend.id
+          SORT friend.friend.name, friend.id ASC
+        RETURN friend    
+      `;
+
+      const actual = getQueryResults(query);
+      assertEqual(3, actual.length);
+      assertEqual("heiko", actual[0].friend.name);
+      assertEqual("micha", actual[1].friend.name);
+      assertEqual("piotr", actual[2].friend.name);
+
+      // Related to: BTS-937
+      assertEqual(["SingletonNode",
+          "CalculationNode",
+          "EnumerateListNode",
+          "CalculationNode",
+          "CalculationNode",
+          "CalculationNode",
+          "SortNode",
+          "ReturnNode"],
+        explainMultipleSorts(query));
+    },
+
+    testSortTripplets3: function () {
+      const query = `
+        LET friends = ${JSON.stringify(generateData())}
+        FOR friend in friends
+          SORT friend.id 
+          SORT friend.friend.name, friend.id, friend.age
+          SORT friend.friend.name, friend.id ASC
+        RETURN friend    
+      `;
+
+      const actual = getQueryResults(query);
+      assertEqual(3, actual.length);
+      assertEqual("heiko", actual[0].friend.name);
+      assertEqual("micha", actual[1].friend.name);
+      assertEqual("piotr", actual[2].friend.name);
+
+      // Related to: BTS-937
+      assertEqual(["SingletonNode",
+          "CalculationNode",
+          "EnumerateListNode",
+          "CalculationNode",
+          "CalculationNode",
+          "CalculationNode",
+          "SortNode",
+          "ReturnNode"],
+        explainMultipleSorts(query));
     },
 
 ////////////////////////////////////////////////////////////////////////////////
 /// @brief check sort optimization with skiplist index
 ////////////////////////////////////////////////////////////////////////////////
 
-    testMultipleFields1 : function () {
+    testMultipleFields1: function () {
       idx = collection.ensureSkiplist("value", "value2");
 
       var query = "FOR c IN " + cn + " FILTER c.value >= 0 SORT c.value RETURN c";
@@ -352,7 +454,7 @@ function ahuacatlQueryOptimizerSortTestSuite () {
       assertEqual(50, actual[50].value);
       assertEqual(98, actual[98].value);
       assertEqual(99, actual[99].value);
-     
+
       assertEqual(["SingletonNode",
                    "ScatterNode",
                    "RemoteNode",
@@ -364,13 +466,13 @@ function ahuacatlQueryOptimizerSortTestSuite () {
                    "CalculationNode",
                    "ReturnNode"],
                   explain(query));
-      
+
       query = "FOR c IN " + cn + " FILTER c.value == 0 && c.value2 >= 0 SORT c.value RETURN c";
 
       actual = getQueryResults(query);
       assertEqual(1, actual.length);
       assertEqual(0, actual[0].value);
-      
+
       assertEqual(["SingletonNode",
                    "ScatterNode",
                    "RemoteNode",
@@ -402,7 +504,7 @@ function ahuacatlQueryOptimizerSortTestSuite () {
       assertEqual(50, actual[50].value);
       assertEqual(98, actual[98].value);
       assertEqual(99, actual[99].value);
-     
+
       assertEqual(["SingletonNode",
                    "ScatterNode",
                    "RemoteNode",
@@ -415,7 +517,7 @@ function ahuacatlQueryOptimizerSortTestSuite () {
                    "CalculationNode",
                    "ReturnNode"],
                   explain(query));
-      
+
       query = "FOR c IN " + cn + " FILTER c.value == 0 && c.value2 <= 1 SORT c.value, c.value2 RETURN c";
 
       actual = getQueryResults(query);
@@ -454,7 +556,7 @@ function ahuacatlQueryOptimizerSortTestSuite () {
       assertEqual(50, actual[50].value);
       assertEqual(98, actual[98].value);
       assertEqual(99, actual[99].value);
-      
+
       assertEqual(["SingletonNode",
                    "ScatterNode",
                    "RemoteNode",
@@ -486,7 +588,7 @@ function ahuacatlQueryOptimizerSortTestSuite () {
       assertEqual(50, actual[50].value);
       assertEqual(98, actual[98].value);
       assertEqual(99, actual[99].value);
-     
+
       assertEqual(["SingletonNode",
                    "ScatterNode",
                    "RemoteNode",
@@ -518,7 +620,7 @@ function ahuacatlQueryOptimizerSortTestSuite () {
       assertEqual(50, actual[50].value);
       assertEqual(98, actual[98].value);
       assertEqual(99, actual[99].value);
-      
+
       assertEqual(["SingletonNode",
                    "ScatterNode",
                    "RemoteNode",
@@ -551,7 +653,7 @@ function ahuacatlQueryOptimizerSortTestSuite () {
       assertEqual(50, actual[50].value);
       assertEqual(98, actual[98].value);
       assertEqual(99, actual[99].value);
-      
+
       assertEqual(["SingletonNode",
                    "ScatterNode",
                    "RemoteNode",
@@ -584,7 +686,7 @@ function ahuacatlQueryOptimizerSortTestSuite () {
       assertEqual(50, actual[50].value);
       assertEqual(98, actual[98].value);
       assertEqual(99, actual[99].value);
-      
+
       assertEqual(["SingletonNode",
                    "ScatterNode",
                    "RemoteNode",
@@ -617,7 +719,7 @@ function ahuacatlQueryOptimizerSortTestSuite () {
       assertEqual(50, actual[50].value);
       assertEqual(98, actual[98].value);
       assertEqual(99, actual[99].value);
-      
+
       assertEqual(["SingletonNode",
                    "ScatterNode",
                    "RemoteNode",
@@ -677,12 +779,12 @@ function sortTestsuite () {
 ////////////////////////////////////////////////////////////////////////////////
 /// @brief check sort results
 ////////////////////////////////////////////////////////////////////////////////
-  
+
     testSortOrderAsc : function () {
       var Query = "FOR i in " + cn + " SORT i.testString ASC RETURN i.testString";
       var result = getQueryResults(Query);
       var length = result.length;
-      
+
       // Verify results...
       assertEqual(length, testStringsSorted.length);
       for (var i = 0; i < length; i++) {
@@ -691,17 +793,17 @@ function sortTestsuite () {
       }
 
       // inspect plan
-      assertEqual(explain(Query), 
-                  ["SingletonNode",
-                   "ScatterNode",
+      assertEqual(explain(Query),
+        ["SingletonNode",
+          "ScatterNode",
                    "RemoteNode",
                    "EnumerateCollectionNode",
                    "RemoteNode",
                    "GatherNode",
-                   "CalculationNode",
-                   "SortNode",
-                   "CalculationNode",
-                   "ReturnNode"]);
+          "CalculationNode",
+          "SortNode",
+          "CalculationNode",
+          "ReturnNode"]);
 
       var plan = AQL_EXPLAIN(Query);
       var sortNode = findExecutionNodes(plan, "SortNode")[0];
@@ -726,17 +828,17 @@ function sortTestsuite () {
       }
 
       // inspect plan
-      assertEqual(explain(Query), 
-                  ["SingletonNode",
-                   "ScatterNode",
+      assertEqual(explain(Query),
+        ["SingletonNode",
+          "ScatterNode",
                    "RemoteNode",
                    "EnumerateCollectionNode",
                    "RemoteNode",
                    "GatherNode",
-                   "CalculationNode",
-                   "SortNode",
-                   "CalculationNode",
-                   "ReturnNode"]);
+          "CalculationNode",
+          "SortNode",
+          "CalculationNode",
+          "ReturnNode"]);
 
       var plan = AQL_EXPLAIN(Query);
       var sortNode = findExecutionNodes(plan, "SortNode")[0];
